force-app/main/default/objects/PricebookEntry/fields/Disty_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Disty_Spiff__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of spiff for Distributor on this price</description>
    <label>Disty Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>