force-app/main/default/objects/PricebookEntry/fields/EvalPriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>EvalPriceAdjustment__c</fullName>
    <formula>UnitPrice !=  Product_Eval_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvalPriceAdjustment</label>
    <type>Checkbox</type>
</CustomField>