force-app/main/default/objects/PricebookEntry/fields/ListPriceAdjust__c.field-meta.xml
<CustomField>
    <fullName>ListPriceAdjust__c</fullName>
    <formula>Product2.List_Price__c !=  UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ListPriceAdjust</label>
    <type>Checkbox</type>
</CustomField>