force-app/main/default/objects/PricebookEntry/fields/PB_Name__c.field-meta.xml
<CustomField>
    <fullName>PB_Name__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PB Name</label>
    <type>Text</type>
</CustomField>