force-app/main/default/objects/PricebookEntry/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Used for price help on opp creation page</description>
    <formula>UnitPrice</formula>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>