force-app/main/default/objects/PricebookEntry/fields/Product2_id__c.field-meta.xml
<CustomField>
    <fullName>Product2_id__c</fullName>
    <formula>Id</formula>
    <label>Product2.id</label>
    <type>Text</type>
</CustomField>