force-app/main/default/objects/PricebookEntry/fields/Product_Eval_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Eval_Price__c</fullName>
    <formula>Product2.Evaluation_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Eval Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>