force-app/main/default/objects/PricebookEntry/fields/ProductSearchNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductSearchNumber__c</fullName>
    <formula>Product__r.Accessory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductSearchNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>