force-app/main/default/objects/PricebookEntry/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <formula>Product2.ProductSearch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RelatedTo</label>
    <type>Text</type>
</CustomField>