force-app/main/default/objects/PricebookEntry/fields/Reseller_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Spiff__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reseller Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>