force-app/main/default/objects/PricebookEntry/fields/Z_Testing_Field__c.field-meta.xml
<CustomField>
    <fullName>Z_Testing_Field__c</fullName>
    <label>Z Testing Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>